--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<h1>这是攻城狮Chova的个人网页雏形..正在优化中</h1>
-<h5>联系攻城狮Chova:</h5>
-<url><a href = "https://blog.csdn.net/JewaveOxford">我的博客: 欢迎私信!</url>
+<h1 align="center">这是<p style="color:red">攻城狮Chova</p>的个人网页雏形..正在优化中</h1>
+<hr />
+<br>
+<h3 align="center">联系攻城狮Chova:<url><a href = "https://blog.csdn.net/JewaveOxford">我的博客: 欢迎私信!</url></h3>
+
