增加图片搜索指导

--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 <hr />
 <br>
 <h3 align="center">联系攻城狮Chova:<url><a href = "https://blog.csdn.net/JewaveOxford">我的博客: 欢迎私信!</url></h3>
-
+<title>更多了解请谷歌:<p style="color:red">攻城狮Chova</p>
+</title>
+<img src="image/攻城狮Chova.png" />
